# VoiceAI

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.md  requirements_cloud.txt  requirements_local.txt  start_local.bat  start_server.bat  start_server.sh  test_local_asr.py  test_mock.bat
GPT-SoVITS/: README.md  extra-req.txt  requirements.txt
cloud_server/: __init__.py  llm_engine.py  main.py  text_chunker.py  tts_engine.py  websocket_server.py
local_client/: __init__.py  asr_engine.py  audio_buffer.py  main.py  vad_module.py  websocket_client.py
shared/: config.py  protocol.py
