[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voiceai"
version = "1.0.0"
description = "高性能低延迟的本地-云端协同实时语音对话系统"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "VoiceAI Team"}
]
keywords = ["voice", "ai", "speech", "llm", "tts", "asr", "real-time"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

# 核心依赖 (本地和云端共用)
dependencies = [
    "numpy>=1.24.0",
    "websockets>=12.0",
    "pyyaml>=6.0",
    "coloredlogs>=15.0",
    "typing_extensions>=4.0.0",
]

[project.optional-dependencies]
# 本地客户端依赖 (Windows + RTX 3060)
local = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",
    "sounddevice>=0.4.6",
    "scipy>=1.11.0",
    "funasr>=1.0.0",
    "modelscope>=1.9.0",
]

# 云端服务依赖 (Ubuntu + RTX 3080 Ti)
cloud = [
    "torch>=2.0.0",
    "vllm>=0.4.0",
    "transformers>=4.40.0",
    "accelerate>=0.27.0",
    "aiohttp>=3.9.0",  # TTS HTTP API 调用
]

# 完整安装 (本地 + 云端)
all = [
    "voiceai[local]",
    "voiceai[cloud]",
]

# 开发依赖
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/voiceai/voiceai"
Documentation = "https://github.com/voiceai/voiceai#readme"
Repository = "https://github.com/voiceai/voiceai"
Issues = "https://github.com/voiceai/voiceai/issues"

[project.scripts]
voiceai-client = "local_client.main:main"
voiceai-server = "cloud_server.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["local_client*", "cloud_server*", "shared*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["local_client", "cloud_server", "shared"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

# uv 配置 - 指定 PyTorch CUDA 索引
[tool.uv]
index-url = "https://pypi.org/simple"
extra-index-url = ["https://download.pytorch.org/whl/cu121"]
